fix align for web desktops windows icons

--- a/src/components/windows/WebDesktops.css
+++ b/src/components/windows/WebDesktops.css
@@ -74,7 +74,6 @@
 .website-favicon {
   position: relative;
   bottom: 60px;
-  left: 1px;
 
   backface-visibility: hidden;
 
